--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ input,
 select,
 textarea {
 	color: #404040;
-	font-family: sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
 	font-size: 1.6rem;
 	line-height: 1.5;
@@ -356,32 +356,41 @@ a:active {
 /*--------------------------------------------------------------
 5.2 Menus
 --------------------------------------------------------------*/
+
 .main-navigation {
 	clear: both;
 	display: block;
 	float: left;
 	width: 100%;
+	background: rgb(88,89,91);
+	background: rgba(0,0,0,.64);
+	position: fixed;
+	top: 54px;
+	height: 86px;
+	padding-left: 450px;
 }
+
 .main-navigation ul {
 	list-style: none;
-	margin: 0;
-	padding-left: 0;
 }
 .main-navigation li {
 	float: left;
 	position: relative;
+	font: 400 .75em Arvo, serif;
+	text-transform: uppercase;
+	margin: 0 9px;
 }
 .main-navigation a {
 	display: block;
 	text-decoration: none;
+	color: #fff;
 }
 .main-navigation ul ul {
-	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 	display: none;
 	float: left;
 	left: 0;
 	position: absolute;
-	top: 1.5em;
+	top: 1em;
 	z-index: 99999;
 }
 .main-navigation ul ul ul {
@@ -438,6 +447,84 @@ a:active {
 	float: right;
 	text-align: right;
 	width: 50%;
+}
+
+.nav-menu {
+	margin: 36px 0 0 9px;
+}
+
+.nav-menu .sub-menu {
+	left: 50%;
+	background: #e5e5e5;
+	margin-left: -105px;
+	top: 50px;
+}
+
+.nav-menu .sub-menu li {
+	margin: 0;
+	text-align: center;
+	padding: 15px 5px;
+	border-bottom: 1px solid #d8d8d8;
+	top: -25px;
+	font-size: 1em;
+}
+
+.nav-menu .sub-menu li:hover {
+	background: #999999;
+}
+
+.nav-menu .sub-menu li a {
+	color: #020202;
+}
+
+.nav-menu .sub-menu li a span {
+	font-weight: 700;
+}
+
+.nav-menu .sub-menu li:last-child {
+	border-bottom: none;
+	padding-bottom: 0;
+}
+
+.nav-menu .sub-menu li:first-child {
+	background: url(img/submenu-arrow.png) no-repeat bottom center;
+	border-bottom: none;
+	padding: 13px 0;
+}
+
+.nav-menu .sub-menu li:first-child a {
+	margin-top: 5px;
+}
+
+.nav-menu > li > a {
+	padding-bottom: 30px;
+}
+
+.social-nav {
+	margin: 20px 20px 0;
+}
+
+.social-nav ul {
+	list-style-type: none;
+	margin: 0;
+	overflow: hidden;
+}
+
+.social-nav li {
+	float: left;
+	margin: 0 15px;
+	opacity: .6;
+}
+
+.social-nav li:hover {
+	opacity: 1.0;
+}
+
+.site-info {
+	font-size: .8em;
+	color: #fff;
+	margin: 0 20px 10px;
+	float: right;
 }
 
 /*--------------------------------------------------------------
@@ -561,6 +648,127 @@ a:active {
 .page-links {
 	clear: both;
 	margin: 0 0 1.5em;
+}
+.site-title {
+	font-family: Arvo, serif;
+	font-size: 5em;
+	font-weight: 700;
+	line-height: .6;
+	position: fixed;
+	top: 32px;
+	left: 40px;
+	z-index: 1;
+	text-shadow: 0 0 20px #585858;
+	text-shadow: 0 0 20px rgba(3,3,3,.1);
+}
+
+.site-title a:link,
+.site-title a:hover,
+.site-title a:visited,
+.site-title a:focus,
+.site-title a:active {
+	text-decoration: none;
+	color: #fff;
+}
+
+.site-description {
+	font-family: Open Sans Condensed, sans-serif;
+	font-size: 1.8em;
+	color: #fff;
+	position: fixed;
+	top: 82px;
+	left: 45px;
+	z-index: 1;
+}
+
+.banner-bar {
+	position: fixed;
+	top: 54px;
+	width: 100%;
+	height: 86px;
+	background: #000;
+	opacity: .64;
+}
+
+.custom-background {
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
+.image-header {
+	font: 700 187.5%/62.5% Arvo, serif;
+	text-transform: uppercase;
+	color: #fff;
+	margin: 0;
+}
+
+.image-description {
+	font: 300 300%/63% Open Sans Condensed, sans-serif;
+	text-transform: lowercase;
+	color: #fff;
+	margin: 0;
+}
+
+.text-block {
+	visibility: visible !important;
+}
+
+.text-block-1 {
+	margin: 61.3125% 0 0 57%;
+}
+
+.image-description-1 {
+	margin-left: 108px;
+}
+
+.text-block-2 {
+	margin: 74% 0 0 13.020833%;
+}
+
+.image-header-2 {
+	margin-left: 9.2%;
+}
+
+.image-description-2 {
+	text-transform: none;
+}
+
+.text-block-3 {
+	margin: 102.7% 0 0 38.020833%;
+}
+
+.image-header-3 {
+	color: #000;
+}
+
+.image-description-3 {
+	color: #000;
+	margin-left: 9.2%;
+}
+
+.text-block-4 {
+	margin: 70.5% 0 0 18.5%;
+}
+
+.image-header-4 {
+	margin-left: 52.5%;
+}
+
+.text-block-5 {
+	margin: 63% 0 0 3.9%;
+}
+
+.image-header-5 {
+	margin-left: 1.2%;
+}
+
+.site-footer {
+	background: rgb(88,89,91);
+	background: rgba(0,0,0,.64);
+	width: 100%;
+	margin: 15% 0 0 0;
 }
 
 /*--------------------------------------------------------------
