--- a/style.css
+++ b/style.css
@@ -455,9 +455,10 @@ a:active {
 
 .nav-menu .sub-menu {
 	left: 50%;
-	background: #e5e5e5;
+	background: url(img/submenu-bg.png) no-repeat center top;
 	margin-left: -105px;
-	top: 50px;
+	top: 29px;
+	padding-top: 21px;
 }
 
 .nav-menu .sub-menu li {
@@ -465,7 +466,6 @@ a:active {
 	text-align: center;
 	padding: 15px 5px;
 	border-bottom: 1px solid #d8d8d8;
-	top: -25px;
 	font-size: 1em;
 }
 
@@ -483,21 +483,10 @@ a:active {
 
 .nav-menu .sub-menu li:last-child {
 	border-bottom: none;
-	padding-bottom: 0;
-}
-
-.nav-menu .sub-menu li:first-child {
-	background: url(img/submenu-arrow.png) no-repeat bottom center;
-	border-bottom: none;
-	padding: 13px 0;
-}
-
-.nav-menu .sub-menu li:first-child a {
-	margin-top: 5px;
 }
 
 .nav-menu > li > a {
-	padding-bottom: 30px;
+	padding-bottom: 40px;
 }
 
 .social-nav {
